log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: writer
          image: jvilo/log-output-writer:1.0
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
        - name: reader
          image: jvilo/log-output-reader:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-logs
              mountPath: /shared
